--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "axios": "^0.14.0",
+    "express": "^4.14.0",
     "lodash.clonedeep": "^4.5.0",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
